// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleting conversion hosts is pending 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": true,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`deleting conversion hosts is rejected 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": "error",
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": true,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`deleting conversion hosts is successful 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "deleteConversionHostResponse": Object {
    "mock": "payload",
  },
  "errorDeleteConversionHost": null,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching conversion host tasks is pending 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": true,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching conversion host tasks is rejected 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": "error",
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": true,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching conversion host tasks is successful 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [
    Object {
      "message": "Example progress message",
      "meta": Object {
        "isTask": true,
        "operation": "enable",
        "resourceId": "1",
        "resourceName": "example-host-1",
        "resourceType": "ManageIQ::Providers::Openstack::CloudManager::Vm",
        "unparsedTaskName": "Configuring a conversion_host: operation=enable resource=(name: example-host-1 type: ManageIQ::Providers::Openstack::CloudManager::Vm id: 1)",
      },
      "name": "example-host-1",
      "state": "Active",
      "status": "Ok",
      "updated_on": 1,
    },
  ],
  "conversionHostTasksByResource": Object {
    "ManageIQ::Providers::Openstack::CloudManager::Vm": Object {
      "1": Object {
        "enable": Array [
          Object {
            "message": "Example progress message",
            "meta": Object {
              "isTask": true,
              "operation": "enable",
              "resourceId": "1",
              "resourceName": "example-host-1",
              "resourceType": "ManageIQ::Providers::Openstack::CloudManager::Vm",
              "unparsedTaskName": "Configuring a conversion_host: operation=enable resource=(name: example-host-1 type: ManageIQ::Providers::Openstack::CloudManager::Vm id: 1)",
            },
            "name": "example-host-1",
            "state": "Active",
            "status": "Ok",
            "updated_on": 1,
          },
        ],
      },
    },
  },
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching conversion hosts is pending 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": true,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching conversion hosts is rejected 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": "error",
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": true,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching conversion hosts is successful 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [
    Object {
      "mock": "conversionHost",
    },
  ],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching servers is pending 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": true,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching servers is rejected 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": "error",
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": true,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching settings is pending 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": true,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching settings is rejected 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": "error",
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": true,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching settings is successful 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {
    "cpu_limit_per_host": 10,
    "max_concurrent_tasks_per_conversion_host": 10,
    "max_concurrent_tasks_per_ems": 10,
  },
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`posting conversion hosts is pending 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": false,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": true,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`posting conversion hosts is rejected 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": "error",
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": true,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`posting conversion hosts is successful 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Object {
    "data": Object {
      "mock": "payload",
    },
  },
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`saving settings is pending 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": true,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`saving settings is rejected 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": "error",
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": true,
  "servers": Array [],
}
`;

exports[`saving settings is successful 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {
    "cpu_limit_per_host": 10,
    "max_concurrent_tasks_per_conversion_host": 10,
    "max_concurrent_tasks_per_ems": 10,
  },
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`sets default state 1`] = `
Object {
  "conversionHostDeleteModalVisible": false,
  "conversionHostRetryModalMounted": false,
  "conversionHostRetryModalVisible": false,
  "conversionHostTaskToRetry": null,
  "conversionHostTasks": Array [],
  "conversionHostTasksByResource": Object {},
  "conversionHostToDelete": null,
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorDeleteConversionHost": false,
  "errorFetchingConversionHostTasks": null,
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isDeletingConversionHost": false,
  "isFetchingConversionHostTasks": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedDeletingConversionHost": false,
  "isRejectedFetchingConversionHostTasks": false,
  "isRejectedFetchingConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;
